# signature

./: .gitignore  Cargo.toml  README.md
signature_macro/: Cargo.toml
signature_macro/src/: lib.rs
src/: dynamic_signature.rs  lib.rs  static_signature.rs
tests/: generic.rs
