[package]
name = "signature_macro"
version = "0.1.0"
authors = ["unknowntrojan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full"] }
findpattern = { path = "../../findpattern" }
module = { path = "../../module" }